correct position for tultip, add letter-spacing for tultip

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,6 @@ html {
   grid-column: 1 / -1;
   grid-row: 1 / 2;
   justify-self: center;
-  z-index: 3;
   max-width: 740px;
   margin: 60px 0 0 0;
   padding: 0;
@@ -25,12 +24,13 @@ html {
   letter-spacing: 3.5px;
   color: #000;
   text-align: center;
+  z-index: 3;
 }
 
 .title:hover::before {
   position: absolute;
-  top: 190px;
-  right: -95px;
+  top: 180px;
+  right: 20px;
   content: 'На самом деле нет.\AВажнее &mdash; научиться ошибаться.';
   white-space: pre;
   box-sizing: border-box;
@@ -38,12 +38,13 @@ html {
   margin: 0;
   padding: 36px 44px;
   font: 400 35px/1 'Raleway-Regular', sans-serif;
+  letter-spacing: 0;
   text-align: left;
   border: 2px solid #000;
   border-radius: 20px;
   box-shadow: 0 14px #000;
   background-color: #fff;
-  z-index: 3;
+  z-index: 4;
 }
 
 .title:hover::after {
@@ -53,8 +54,8 @@ html {
   width: 100%;
   height: 100%;
   background-color: rgb(255 255 255 / .3);
-  z-index: 2;
   cursor: pointer;
+  z-index: 2;
 }
 
 .title__last-word {
@@ -73,9 +74,9 @@ html {
 .video {
   grid-column: 1 / -1;
   grid-row: 1 / -1;
-  z-index: 1;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
+  z-index: 1;
 }
